--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -9,13 +9,18 @@
         </div>
 
         <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
-            <span class="fw-bold text-lg" th:text="${session.full_name}"></span>
             <ul class="navbar-nav flex-row align-items-center ms-auto">
+                <div class="d-flex flex-column align-items-end justify-content-end me-3">
+                    <span class="fw-bold text-lg" th:text="${session.full_name}"></span>
+                    <span class="fw-bold text-lg" th:text="${session.role_name}"></span>
+                </div>
+
                 <!-- User -->
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                    <a class="nav-link dropdown-toggle hide-arrow p-0" href="javascript:void(0);" data-bs-toggle="dropdown">
+                    <a class="nav-link dropdown-toggle hide-arrow p-0" href="javascript:void(0);"
+                       data-bs-toggle="dropdown">
                         <div class="avatar avatar-online">
-                            <img src="" th:src="@{/images/user.png}" alt="" class="w-px-40 h-auto rounded-circle" />
+                            <img src="" th:src="@{/images/user.png}" alt="" class="w-px-40 h-auto rounded-circle"/>
                         </div>
                     </a>
 
@@ -25,11 +30,12 @@
                                 <div class="d-flex">
                                     <div class="flex-shrink-0 me-3">
                                         <div class="avatar avatar-online">
-                                            <img src="" th:src="@{/images/user.png}" alt="" class="w-px-40 h-auto rounded-circle" />
+                                            <img src="" th:src="@{/images/user.png}" alt=""
+                                                 class="w-px-40 h-auto rounded-circle"/>
                                         </div>
                                     </div>
                                     <div class="flex-grow-1">
-                                        <h6 class="mb-0" th:text="${session.username}"></h6>
+                                        <h6 class="mb-0" th:text="${session.full_name}"></h6>
                                         <small class="text-muted" th:text="${session.role_name}"></small>
                                     </div>
                                 </div>
