--- a/src/main/resources/templates/view/event_management/modals/add_event_modal.html
+++ b/src/main/resources/templates/view/event_management/modals/add_event_modal.html
@@ -9,7 +9,7 @@
                 </div>
                 <form id="form_addEvent">
                     <input type="hidden" id="method">
-                    <input type="hidden" id="event_id" name="id">
+                    <input type="hidden" id="event_id" name="id" value="0">
                     <div class="modal-body">
                         <div class="d-flex flex-column gap-2">
                             <span><span class="text-danger">*</span>Event Name</span>
