--- a/src/main/resources/templates/view/reports/items/inventoryReport.html
+++ b/src/main/resources/templates/view/reports/items/inventoryReport.html
@@ -18,13 +18,8 @@
             </div>
         </form>
     </div>
-
-    <div class="text-start d-flex align-items-start justify-content-start">
-        <button class="btn  mt-2 btn-outline-primary"><span>GENERATE REPORT&nbsp;</span>
-        </button>
-    </div>
-
-    <div class="table-responsive">
+    <hr>
+    <div class="table-responsive mt-3">
         <table id="DT_InventoryReport" class="table">
             <thead>
             <tr class="text-center">
