--- a/src/main/resources/templates/layout/menu.html
+++ b/src/main/resources/templates/layout/menu.html
@@ -95,6 +95,12 @@
                     <div class="text-truncate" data-i18n="CHANGE PASSWORD">Archived List</div>
                 </a>
             </li>
+            <li class="menu-item">
+                <a href="" th:href="@{/audit_logs}" class="menu-link">
+                    <i class="menu-icon tf-icons bx bx-file-find"></i>
+                    <div class="text-truncate" data-i18n="Audit Logs">Audit Logs</div>
+                </a>
+            </li>
         </th:block>
     </ul>
 </div>
