--- a/src/main/resources/templates/view/audit_logs/index.html
+++ b/src/main/resources/templates/view/audit_logs/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE HTML>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
+      dir="ltr"
+      data-theme="theme-default"
+      th:data-assets-path="@{/app-assets/}"
+      data-template="vertical-menu-template"
+      data-style="light">
 
 <head>
     <title>Latte Break</title>
@@ -8,12 +13,12 @@
     <link rel="shortcut icon" type="image/x-icon" th:href="@{images/logo.jpg}"/>
     <link th:href="@{assets/bootstrap-5.3.3-dist/css/bootstrap.min.css}" rel="stylesheet">
     <link rel="stylesheet" th:href="@{assets/fontawesome-free-6.7.2-web/css/all.min.css}">
-    <link rel="stylesheet" th:href="@{assets/dist/apexcharts.css}">
     <link rel="stylesheet" th:href="@{/vendor/css/rtl/core.css}"/>
     <link rel="stylesheet" th:href="@{/vendor/css/rtl/theme-default.css}"/>
     <link rel="stylesheet" th:href="@{/vendor/fonts/boxicons.css}"/>
     <link rel="stylesheet" th:href="@{/vendor/fonts/fontawesome.css}"/>
     <link rel="stylesheet" th:href="@{assets/dataTable/datatables.min.css}">
+    <link rel="stylesheet" th:href="@{assets/css/main.css}">
 
     <script th:src="@{assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js}"></script>
     <script th:src="@{assets/js/jquery.min.js}"></script>
@@ -34,79 +39,66 @@
             <div class="content-wrapper">
                 <div id="frag_container" class="container-xxl flex-grow-1 container-p-y">
                     <div class="card">
+
                         <div class="card-header">
-                            <div class="card-title"><h4>INVENTORY REPORT</h4></div>
+                            <div class="card-title"><h4>Audit Logs</h4></div>
                             <hr>
                         </div>
+
                         <div class="card-body">
 
-                            <div>
-                                <form>
+                            <div class="mb-2">
+                                <form id="form_search">
+                                    <div class="col-6">
+                                        <span>Name</span>
+                                        <input id="name" type="text" class="form-control"/>
+                                    </div>
                                     <div class="col-6">
                                         <span>Date</span>
-                                        <div class="d-flex gap-2">
-                                            <input class="form-control" type="date"/>
-                                            <input class="form-control" type="date"/>
+                                        <div class="d-flex flex-row gap-2">
+                                            <input id="date_from" type="date" class="form-control"/>
+                                            <input id="date_to" type="date" class="form-control"/>
                                         </div>
+                                    </div>
+                                    <div class="d-flex gap-2 mt-2">
+                                        <button class="btn btn-primary">Search</button>
+                                        <button type="button" class="btn btn-secondary">Clear</button>
                                     </div>
                                 </form>
                             </div>
 
-                            <div class="text-start d-flex align-items-start justify-content-start">
-                                <button class="btn  mt-2 btn-outline-primary"><span>GENERATE REPORT&nbsp;</span>
-                                </button>
-                            </div>
-
                             <div class="table-responsive">
-                                <table id="DT_InventoryReport" class="table">
+                                <table id="DT_AuditLogs" class="table table-striped">
                                     <thead>
-                                    <tr class="text-center">
-                                        <th>Item Code</th>
-                                        <th>Item Name</th>
-                                        <th>Category</th>
-                                        <th>Unit Measurement</th>
-                                        <th>Available Stock</th>
-                                        <th>Expiration Date</th>
+                                    <tr>
+                                        <th>#</th>
+                                        <th>User</th>
+                                        <th>Action</th>
+                                        <th>Timestamp</th>
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr>
-                                        <td>ITEM-1</td>
-                                        <td>Chair</td>
-                                        <td>Furniture</td>
-                                        <td>piece</td>
-                                        <td>10</td>
-                                        <td>-</td>
-                                    </tr>
-                                    <tr>
-                                        <td>ITEM-2</td>
-                                        <td>Chicken</td>
-                                        <td>Frozen Goods</td>
-                                        <td>pack</td>
-                                        <td>10</td>
-                                        <td>2025-06-21</td>
-                                    </tr>
                                     </tbody>
                                 </table>
                             </div>
-
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div th:replace="~{view/inventory/modal/productModal :: _productModal}"></div>
-
 <!-- Helpers -->
 <script src="" th:src="@{/app-assets/vendor/js/helpers.js}"></script>
+<script src="" th:src="@{/app-assets/vendor/js/template-customizer.js}"></script>
 <script src="" th:src="@{/app-assets/js/config.js}"></script>
 
 <script src="" th:src="@{/app-assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js}"></script>
 <script src="" th:src="@{/app-assets/vendor/libs/hammer/hammer.js}"></script>
 <script src="" th:src="@{/app-assets/vendor/libs/typeahead-js/typeahead.js}"></script>
+<script src="" th:src="@{/app-assets/vendor/libs/sweetalert2/sweetalert2.js}"></script>
 <script src="" th:src="@{/app-assets/vendor/libs/select2/select2.js}"></script>
 <script src="" th:src="@{/app-assets/vendor/libs/jquery-mask-plugin/jquery.mask.min.js}"></script>
 <script src="" th:src="@{/app-assets/vendor/js/menu.js}"></script>
@@ -114,8 +106,9 @@
 <!-- Scripts -->
 <script th:src="@{/app-assets/vendor/js/menu.js}"></script>
 <script th:src="@{/app-assets/js/main.js}"></script>
-<script th:src="@{assets/dist/apexcharts.min.js}"></script>
-<script th:src="@{assets/js/reports/inventoryReport.js}"></script>
+<script src="" th:src="@{/assets/base/global.js}"></script>
+<script src="" th:src="@{/assets/base/base.js}"></script>
+<script th:src="@{assets/js/audit_logs/script.js}"></script>
 
 </body>
 
