--- a/src/main/resources/templates/view/event_management/index.html
+++ b/src/main/resources/templates/view/event_management/index.html
@@ -51,17 +51,17 @@
                                 <form id="form_search">
                                     <div class="col-6">
                                         <span>Event Name</span>
-                                        <input name="name" class="col-6 form-control">
+                                        <input name="name" id="event_name_search" class="col-6 form-control">
                                     </div>
                                     <div class="col-6">
                                         <span>Date</span>
                                         <div class="d-flex gap-2">
-                                            <input id="date_from" class="form-control" type="date"/>
-                                            <input id="date_to" class="form-control" type="date"/>
+                                            <input name="date_from" id="date_from" class="form-control" type="date"/>
+                                            <input name="date_to" id="date_to" class="form-control" type="date"/>
                                         </div>
                                     </div>
                                     <div class="d-flex gap-2 mt-2">
-                                        <button class="btn btn-primary">Search</button>
+                                        <button id="btnSearch" class="btn btn-primary">Search</button>
                                         <button type="button" class="btn btn-secondary">Clear</button>
                                     </div>
                                 </form>
