--- a/src/main/resources/templates/view/reports/index.html
+++ b/src/main/resources/templates/view/reports/index.html
@@ -20,11 +20,19 @@
     <link rel="stylesheet" th:href="@{/vendor/fonts/fontawesome.css}"/>
     <link rel="stylesheet" th:href="@{assets/dataTable/datatables.min.css}">
     <link rel="stylesheet" th:href="@{assets/css/main.css}">
+    <link rel="stylesheet" th:href="@{assets/dataTable/buttons.dataTables.min.css}">
 
     <script th:src="@{assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js}"></script>
     <script th:src="@{assets/js/jquery.min.js}"></script>
     <script th:src="@{assets/dataTable/datatables.min.js}"></script>
     <script th:src="@{assets/sweetalert/sweetalert2.all.min.js}"></script>
+
+    <script th:src="@{assets/dataTable/dataTables.buttons.min.js}"></script>
+    <script th:src="@{assets/dataTable/buttons.html5.min.js}"></script>
+    <script th:src="@{assets/dataTable/buttons.print.min.js}"></script>
+    <script th:src="@{assets/dataTable/jszip.min.js}"></script>
+    <script th:src="@{assets/dataTable/pdfmake.min.js}"></script>
+    <script th:src="@{assets/dataTable/vfs_fonts.js}"></script>
 </head>
 
 <body>
