--- a/src/main/resources/templates/view/reports/items/inventoryReport.html
+++ b/src/main/resources/templates/view/reports/items/inventoryReport.html
@@ -24,6 +24,7 @@
             <thead>
             <tr class="text-center">
                 <th>Item Code</th>
+                <th>Batch Code</th>
                 <th>Item Name</th>
                 <th>Category</th>
                 <th>Unit Measurement</th>
@@ -32,22 +33,6 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <td>ITEM-1</td>
-                <td>Chair</td>
-                <td>Furniture</td>
-                <td>piece</td>
-                <td>10</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>ITEM-2</td>
-                <td>Chicken</td>
-                <td>Frozen Goods</td>
-                <td>pack</td>
-                <td>10</td>
-                <td>2025-06-21</td>
-            </tr>
             </tbody>
         </table>
     </div>
