--- a/src/main/resources/templates/view/reports/items/inventoryReport.html
+++ b/src/main/resources/templates/view/reports/items/inventoryReport.html
@@ -1,20 +1,24 @@
 <div th:fragment="_inventoryReport" xmlns:th="http://www.w3.org/1999/xhtml">
     <div>
-        <form>
+        <form id="form_search_inventory">
             <div class="col-6 d-flex flex-column gap-2">
                 <span>Date</span>
                 <div class="d-flex gap-2">
-                    <input class="form-control" type="date"/>
-                    <input class="form-control" type="date"/>
+                    <input name="date_from" id="date_from_inventory" class="form-control" type="date"/>
+                    <input name="date_to" id="date_to_inventory" class="form-control" type="date"/>
                 </div>
                 <span>Category</span>
-                <select name="inventoryCategory" class="col-6 form-select">
+                <select id="category_id_inventory" name="category_id" class="col-6 form-select">
                     <option value="0">All</option>
                     <option th:each="category : ${itemCategory}"
                             th:text="${category.category_name}"
                             th:value="${category.category_id}">
                     </option>
                 </select>
+            </div>
+            <div class="d-flex gap-2 mt-2">
+                <button id="btnSearch" class="btn btn-primary">Search</button>
+                <button type="button" class="btn btn-secondary">Clear</button>
             </div>
         </form>
     </div>
